[package]
name = "unitil"
version = "0.2.0"
authors = ["yutotnh <57719497+yutotnh@users.noreply.github.com>"]
edition = "2021"
description = "EUC-JPの全角チルダを波ダッシュに変換するツール"
lisence-file = "LICENSE"
repository = "https://github.com/yutotnh/unitil"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.10", features = ["derive"] }
encoding_rs = "0.8.34"

[dev-dependencies]
assert_cmd = "2.0.15"
