[package]
name = "unitil"
version = "0.2.1"
authors = ["yutotnh <57719497+yutotnh@users.noreply.github.com>"]
edition = "2021"
description = "EUC-JPの全角チルダを波ダッシュに変換するツール"
license = "MIT"
repository = "https://github.com/yutotnh/unitil"
readme = "README.md"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
encoding_rs = "0.8.35"

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.15.0"
